--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @use 'hero';
 @use 'variaveis';
+@use 'shows';
+@use 'plans';
 
 @font-face {
     font-family: Avenir;
@@ -17,11 +19,11 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Avenir, sans-serif;
 }
 
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
 }
 
 @mixin title($fontSize: 40px) {
@@ -63,4 +65,18 @@ body {
 
 .title--small {
     @include title(28px);
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+    border: none;
 }
